WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87866
[GTK][WK2] Errors in documentation about webkit_web_view_run_javascript()
https://bugs.webkit.org/show_bug.cgi?id=87866
Summary
[GTK][WK2] Errors in documentation about webkit_web_view_run_javascript()
Mario Sanchez Prada
Reported
2012-05-30 09:58:56 PDT
The snippet of code provided as documentation for webkit_web_view_run_javascript() and webkit_web_view_run_javascript_finish () in WebKit2GTK API contains some errors that should be fixed.
Attachments
Patch proposal
(3.05 KB, patch)
2012-05-30 10:02 PDT
,
Mario Sanchez Prada
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mario Sanchez Prada
Comment 1
2012-05-30 10:02:19 PDT
Created
attachment 144847
[details]
Patch proposal
WebKit Review Bot
Comment 2
2012-05-30 10:05:55 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Mario Sanchez Prada
Comment 3
2012-05-30 10:08:29 PDT
Comment on
attachment 144847
[details]
Patch proposal Let's get the CQ do the work...
WebKit Review Bot
Comment 4
2012-05-30 15:38:04 PDT
Comment on
attachment 144847
[details]
Patch proposal Clearing flags on attachment: 144847 Committed
r118985
: <
http://trac.webkit.org/changeset/118985
>
WebKit Review Bot
Comment 5
2012-05-30 15:38:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug