[GTK][WK2] Errors in documentation about  webkit_web_view_run_javascript() https://bugs.webkit.org/show_bug.cgi?id=87866

Patch by Mario Sanchez Prada <msanchez@igalia.com> on 2012-05-30
Reviewed by Martin Robinson.

* UIProcess/API/gtk/WebKitWebView.cpp: Fix errors.

Canonical link: https://commits.webkit.org/105705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118985 268f45cc-cd09-0410-ab3c-d52691b4dbfc